chore: add new logo for sidebar and fix alignment, and fix sidebar icon size

--- a/client-portal/src/components/sidebar/sidebar.scss
+++ b/client-portal/src/components/sidebar/sidebar.scss
@@ -39,12 +39,15 @@
     }
 
     .logo {
+      display: flex;
+      justify-content: center;
+
       @media (max-width: 767px) {
         display: none;
       }
       svg {
         @media (max-width: 991px) {
-          width: 2.813rem;
+          width: 1.4375rem;
         }
       }
     }
@@ -52,6 +55,10 @@
       color: #9cb0c2;
       background-color: transparent;
       cursor: pointer;
+
+      svg {
+        width: 1.625rem;
+      }
 
       @media (max-width: 991px) {
         p {
